--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "tightenco/duster": "^2.5"
     },
     "autoload": {
         "psr-4": {
@@ -45,7 +46,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "lint_all_code": "./vendor/bin/duster lint",
+        "fix_all_code": "./vendor/bin/duster fix",
+        "lint_code": "./vendor/bin/duster lint --dirty",
+        "fix_code": "./vendor/bin/duster fix --dirty"
     },
     "extra": {
         "laravel": {
